--- a/api/.env
+++ b/api/.env
@@ -1,2 +1,2 @@
 # MONGO_URL = mongodb+srv://airbnb:dEDpBYqfjsHRakbg@cluster0.ygfad5e.mongodb.net/?retryWrites=true&w=majority;
-MONGO_URL = mongodb+srv://airbnb:dEDpBYqfjsHRakbg@cluster0.ygfad5e.mongodb.net/?retryWrites=true&w=majority
+MONGO_URL = 'mongodb+srv://airbnb:dEDpBYqfjsHRakbg@cluster0.ygfad5e.mongodb.net/?retryWrites=true&w=majority'
