--- a/api/.vscode/launch.json
+++ b/api/.vscode/launch.json
@@ -4,6 +4,13 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+    {
+        "type": "node",
+        "request": "launch",
+        "name": "Launch Node.js",
+        "program": "${workspaceFolder}\\index.js",
+        "console": "integratedTerminal",
+    },
         {
             "type": "node",
             "request": "launch",
